--- a/_posts/2015-08-14-blog-post-4.md
+++ b/_posts/2015-08-14-blog-post-4.md
@@ -1,14 +1,17 @@
 ---
-title: 'Blog Post number 4'
-date: 2015-08-14
-permalink: /posts/2012/08/blog-post-4/
+title: 'New Member Lilo'
+date: 2022-08-14
+permalink: /posts/2022/12/blog-post-4/
+excerpt: "Hi Lilo!"
+<br/><video src='/images/Lilo.mov' width=180/>"
 tags:
-  - cool posts
-  - category1
-  - category2
+  - kitten
+  - Lilo
+  - pet
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+Today we have a new family member Lilo! He is an American long hair.
+
 
 Headings are cool
 ======
