--- a/_posts/2014-08-14-blog-post-3.md
+++ b/_posts/2014-08-14-blog-post-3.md
@@ -3,7 +3,7 @@ title: 'Blog Post number 3'
 date: 2014-08-14
 permalink: /posts/2014/08/blog-post-3/
 excerpt: "Hi Lilo!"
-<video src='/images/Lilo.mov' width=180/>"
+<video src='/Users/michaelxing/langqixing.github.io/images/Lilo.mov' width=180/>"
 tags:
   - kitten
   - Lilo
