--- a/_posts/2014-08-14-blog-post-3.md
+++ b/_posts/2014-08-14-blog-post-3.md
@@ -3,7 +3,7 @@ title: 'Blog Post number 3'
 date: 2014-08-14
 permalink: /posts/2014/08/blog-post-3/
 excerpt: "Hi Lilo!"
-<video src="https://github.com/LangqiXing/langqixing.github.io/blob/master/images/Lilo.mov"></video>
+![Lilo] (https://github.com/LangqiXing/langqixing.github.io/blob/master/images/Lilo.mov">
 tags:
   - kitten
   - Lilo
