--- a/_posts/2014-08-14-blog-post-3.md
+++ b/_posts/2014-08-14-blog-post-3.md
@@ -3,6 +3,7 @@ title: 'Blog Post number 3'
 date: 2014-08-14
 permalink: /posts/2014/08/blog-post-3/
 excerpt: "Hi Lilo!"
+![Lilovideo](/images/Lilo.mov)
 tags:
   - kitten
   - Lilo
