--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,6 +1,6 @@
  ---
-title: 'Blog Post number 1'
-date: 2012-08-14
+title: 'Hi Lilo!'
+date: 2022-12-17
 permalink: /posts/2012/08/blog-post-1/
 tags:
   - cool posts
