--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -2,7 +2,7 @@
 title: 'Hi Lilo!'
 date: 2022-12-17
 permalink: /posts/2012/08/blog-post-1/
-![Lilopic](/images/Lilo.gif)
+<img alt="Lilo" src="/images/Lilo.gif"> </img>
 tags:
   - cool posts
   - category1
