--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,8 +1,5 @@
  ---
-title: 'Hi Lilo!'
-date: 2022-12-17
-permalink: /posts/2012/08/blog-post-1/
-<img alt="Lilo" src="/images/Lilo.gif"> </img>
+<img alt="Lilo" src="/images/Lilo.gif">
 tags:
   - cool posts
   - category1
