--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,9 +1,13 @@
  ---
+ 
+ title: '👋 Hi Lilo!'
+date: 2022-12-17
+permalink: /posts/2012/08/blog-post-1/
 <img alt="Lilo" src="/images/Lilo.gif">
 tags:
-  - cool posts
-  - category1
-  - category2
+  - Lilo
+  - kitten
+  - pet
 ---
 
 This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
