--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -2,6 +2,7 @@
 title: '👋 Hi Lilo!'
 date: 2022-12-17
 permalink: /posts/2012/08/blog-post-1/
+excerpt: "Welcome our new member Lilo!"
 <img alt="Lilo" src="/images/Lilo.gif">
 tags:
   - Lilo
