--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,9 +1,9 @@
- ---
+---
 title: '👋 Hi Lilo!'
 date: 2022-12-17
 permalink: /posts/2012/08/blog-post-1/
 excerpt: "Welcome our new member Lilo!"
-<img alt="Lilo" src="/images/Lilo.gif">
+<br/><img alt="Lilo" src="/images/Lilo.gif">"
 tags:
   - Lilo
   - kitten
