--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,11 +1,13 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
+title: '👋 Hi Lilo!'
+date: 2022-12-17
 permalink: /posts/2012/08/blog-post-1/
+excerpt: "Hope everyone can be who they want to be."
+<br/><img alt="Lilo" src="/images/Lilo.gif">"
 tags:
-  - cool posts
-  - category1
-  - category2
+  - Lilo
+  - Pet
+  - Kitten
 ---
 
 This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
